# pycounts_nb

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_nb/: __init__.py  pycounts_nb.py
tests/: test_pycounts_nb.py
